// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-masterchain should deploy to the workchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQBjV6uMBe_tx39-NHn2F8LdHp6vkPSfLgPJ9tOTy0wiZEQJ",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3890n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should deploy to the workchain from masterchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kf9bjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQqq2",
          "to": "kQB_apSIJVtt4YBXpFxBAoSOCsvIRrAN-0a0LMyM8SnRk_oT",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3674n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should deploy to the workchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQB_apSIJVtt4YBXpFxBAoSOCsvIRrAN-0a0LMyM8SnRk_oT",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3674n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should not deploy to the workchain from masterchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kf9bjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQqq2",
          "to": "kQBjV6uMBe_tx39-NHn2F8LdHp6vkPSfLgPJ9tOTy0wiZEQJ",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "failed",
        "errorCode": 137,
        "errorMessage": "Masterchain support is not enabled for this contract",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQBjV6uMBe_tx39-NHn2F8LdHp6vkPSfLgPJ9tOTy0wiZEQJ",
          "to": "kf9bjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQqq2",
          "type": "internal",
          "value": 9988839000n,
        },
      },
    ],
  },
]
`;
